# model-clinic

./: .gitignore  CHANGELOG.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: model-health.yml  publish.yml
docs/: deep_repair_design.md  plugin_guide.md  postmortem_300m.md  treatment_recipes.md  troubleshooting.md
notebooks/: 01_quickstart.ipynb  02_treatment_guide.ipynb  03_training_monitor.ipynb
schemas/: exam-output.json
scripts/: batch_scan.py  open_gates.py  surgical_repair.py
src/model_clinic/: __init__.py  _badge.py  _eval.py  _health_score.py  _hf_callback.py  _integrations.py  _loader.py  _manifest.py  _monitor.py  _mri.py  _plugins.py  _profiles.py  _references.py  _report.py  _synthetic.py  _types.py  _utils.py  _validation.py  cli.py  clinic.py
src/model_clinic/_repair/: __init__.py  activation.py  calibration.py  distill.py  graft.py  spectral.py
src/model_clinic/_tools/: __init__.py  ablate.py  activation_cmd.py  attention.py  autopsy.py  badge.py  compare.py  dashboard.py  demo.py  diff.py  graft_cmd.py  health.py  logit_lens.py  mri.py  neurons.py  new_plugin.py  plugins_cmd.py  prune_suggest.py  report.py  spectral_cmd.py  surgery.py  validate.py  xray.py
tests/: conftest.py  test_activation.py  test_api.py  test_autopsy.py  test_badge.py  test_batch_pipeline.py  test_causal.py  test_cli.py  test_clinic.py  test_compare.py  test_dashboard.py  test_distill.py  test_errors.py  test_explain.py  test_graft.py  test_health_score.py  test_integrations.py  test_loader.py  test_manifest.py  test_monitor.py  test_mri.py  test_new_detectors.py  test_onnx_loader.py  test_plugins.py  test_profiles.py  test_references.py  test_report_viz.py  test_spectral.py  test_synthetic.py  test_validate.py  test_validation.py
