[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-clinic"
version = "0.2.0"
description = "Diagnose, treat, and understand neural network models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Connor", email = "connor@atles.dev" },
]
keywords = ["pytorch", "model-analysis", "interpretability", "debugging", "neural-networks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
hf = ["transformers>=4.36"]
safetensors = ["safetensors>=0.4.0"]
all = ["transformers>=4.36", "safetensors>=0.4.0"]
dev = ["pytest>=7.0", "pytest-timeout", "pytest-cov"]

[project.scripts]
model-clinic = "model_clinic.cli:main"
model-xray = "model_clinic._tools.xray:main"
model-diff = "model_clinic._tools.diff:main"
model-health = "model_clinic._tools.health:main"
model-surgery = "model_clinic._tools.surgery:main"
model-ablate = "model_clinic._tools.ablate:main"
model-neurons = "model_clinic._tools.neurons:main"
model-attention = "model_clinic._tools.attention:main"
model-logit-lens = "model_clinic._tools.logit_lens:main"

[tool.hatch.build.targets.wheel]
packages = ["src/model_clinic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
